Updated files and added the customer service dialog template

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1120,7 +1120,7 @@ pre[class*=" language-"] {
     height: 5rem;
     width: 5rem; }
     .chat-box--avatar_WATSON {
-      background-color: #325c80; }
+      background-color: #FFFFFF; }
     .chat-box--avatar_YOU {
       background-color: #00B2EF; }
   .chat-box--avatar-img {
